Add admin panel: Content management system for books, programs and contact info

--- a/index.html
+++ b/index.html
@@ -154,12 +154,17 @@
                             <p>İstanbul, Türkiye</p>
                         </div>
                     </div>
-                    <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                    </div>
+                <div class="social-links">
+                    <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div style="margin-top: 2rem; text-align: center;">
+                    <a href="admin.html" class="btn btn-secondary" style="background: #6b7280; color: white; text-decoration: none; padding: 10px 20px; border-radius: 25px; font-size: 0.9rem;">
+                        <i class="fas fa-cog"></i> Admin Panel
+                    </a>
+                </div>
                 </div>
                 <div class="contact-form">
                     <form id="contactForm" action="https://formspree.io/f/myzyjykd" method="POST">
