--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
                     <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                 </div>
-                <div style="margin-top: 2rem; text-align: center;">
-                    <a href="admin.html" class="btn btn-secondary" style="background: #6b7280; color: white; text-decoration: none; padding: 10px 20px; border-radius: 25px; font-size: 0.9rem;">
+                <div style="margin-top: 2rem; text-align: center; padding: 1rem; background: rgba(255, 255, 255, 0.1); border-radius: 10px;">
+                    <a href="admin.html" style="background: #735d88; color: white; text-decoration: none; padding: 15px 30px; border-radius: 25px; font-size: 1rem; font-weight: 600; display: inline-block; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(115, 93, 136, 0.3);">
                         <i class="fas fa-cog"></i> Admin Panel
                     </a>
+                    <p style="margin-top: 0.5rem; color: rgba(255, 255, 255, 0.8); font-size: 0.9rem;">Site içeriğini yönetin</p>
                 </div>
                 </div>
                 <div class="contact-form">
